--- a/lunologger-python/app.yaml
+++ b/lunologger-python/app.yaml
@@ -3,7 +3,11 @@ api_version: 1
 threadsafe: true
 
 handlers:
-- url: /public
-  static_dir: public
+- url: /static
+  static_dir: static
 - url: /.*
   script: main.app
+
+libraries:
+- name: flask
+  version: 0.12
