--- a/lunologger-python/index.yaml
+++ b/lunologger-python/index.yaml
@@ -11,12 +11,12 @@ indexes:
 # your application using appcfg.py.
 
 - kind: Ticker
-  ancestor: yes
   properties:
+  - name: pair
   - name: timestamp
 
 - kind: Ticker
-  ancestor: yes
   properties:
+  - name: pair
   - name: timestamp
     direction: desc
